# wagtail-localize-panel

./: README.rst  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/users/: configuration.rst  index.rst  installation.rst
src/wagtail_localize_panel/: __init__.py  apps.py  config.py  models.py  notify_translations.py  utils.py  views.py  wagtail_hooks.py
src/wagtail_localize_panel/migrations/: 0001_add_permission.py  0002_add_permission.py
src/wagtail_localize_panel/templates/wagtail_localize_panel/home/: workflow_pages_to_translate.html
